tamil_logs/stage18_0.log
nohup: ignoring input
----------------------- Stage 18 begin---------------------------
Thu Jun  2 17:36:31 UTC 2022
rnnlm/ensure_counts_present.sh: generating counts file for data/rnnlm/text/dev.txt
  File "<string>", line 14
    print(f"{word} {count}")
                          ^
SyntaxError: invalid syntax
sed: couldn't write 507 items to stdout: Broken pipe
cat: write error: Broken pipe
rnnlm/ensure_counts_present.sh: generating counts file for data/rnnlm/text/ted.txt
  File "<string>", line 14
    print(f"{word} {count}")
                          ^
SyntaxError: invalid syntax
sed: couldn't write 72 items to stdout: Broken pipe
cat: write error: Broken pipe
rnnlm/ensure_counts_present.sh: generating counts file for data/rnnlm/text/train.txt
  File "<string>", line 14
    print(f"{word} {count}")
                          ^
SyntaxError: invalid syntax
sed: couldn't write 643 items to stdout: Broken pipe
cat: write error: Broken pipe
rnnlm/get_unigram_probs.py: Weight for data source 'train' not set
Traceback (most recent call last):
  File "rnnlm/choose_features.py", line 140, in <module>
    assert len(unigram_probs) == len(wordlist)
AssertionError
